convSNN/convSNN_hls/solution1/csim/report/fc1_top_csim.log
INFO: [SIM 2] *************** CSIM start ***************
INFO: [SIM 4] CSIM will launch GCC as the compiler.
   Compiling ../../../../conv1_tb.cpp in debug mode
   Compiling ../../../../conv1_top.cpp in debug mode
../../../../conv1_top.cpp:16:1: error: wrong number of template arguments (4, should be 3)
 > weights_conv1;
 ^
In file included from ../../../../../finn-hlslib-lif/bnn-library.h:57:0,
                 from ../../../../conv1_top.cpp:3:
../../../../../finn-hlslib-lif/weights.hpp:67:7: note: provided for ‘template<unsigned int SIMD, unsigned int PE, unsigned int TILES> class BinaryWeights’
 class BinaryWeights {
       ^~~~~~~~~~~~~
../../../../conv1_top.cpp:16:3: error: conflicting declaration ‘int weights_conv1’
 > weights_conv1;
   ^~~~~~~~~~~~~
In file included from ../../../../conv1_top.cpp:7:0:
../../../../conv1_weights.hpp:13:3: note: previous declaration as ‘BinaryWeights<3u, 8u, 4u> weights_conv1’
 > weights_conv1;
   ^~~~~~~~~~~~~
../../../../conv1_top.cpp: In function ‘void conv1_lif_top(hls::stream<ap_uint<3> >&, hls::stream<ap_uint<8> >&, unsigned int)’:
../../../../conv1_top.cpp:50:5: error: no matching function for call to ‘ConvLayer_Batch(hls::stream<ap_uint<3> >&, hls::stream<ap_uint<8> >&, BinaryWeights<3u, 8u, 4u>&, ThresholdActivation<ap_fixed<16, 6> >, double, unsigned int&, ap_resource_dsp)’
     );
     ^
In file included from ../../../../../finn-hlslib-lif/bnn-library.h:64:0,
                 from ../../../../conv1_top.cpp:3:
../../../../../finn-hlslib-lif/convlayer.h:106:6: note: candidate: template<unsigned int ConvKernelDim, unsigned int IFMChannels, unsigned int IFMDim, unsigned int OFMChannels, unsigned int OFMDim, unsigned int SIMD, unsigned int SIMDSP, unsigned int PE, class TSrcI, class TDstI, class TWeightI, class TD, unsigned int WIDTH, unsigned int I, int InStreamW, int OutStreamW, class TW, class TA, class R> void ConvLayer_Batch(hls::stream<ap_uint<InStreamW> >&, hls::stream<ap_uint<OutStreamW> >&, const TW&, const TA&, unsigned int, TD, const R&)
 void ConvLayer_Batch(hls::stream<ap_uint<InStreamW>>  &in,
      ^~~~~~~~~~~~~~~
../../../../../finn-hlslib-lif/convlayer.h:106:6: note:   template argument deduction/substitution failed:
make: *** [csim.mk:76: obj/conv1_top.o] Error 1
ERR: [SIM 100] 'csim_design' failed: compilation error(s).
INFO: [SIM 3] *************** CSIM finish ***************
